    
    o	The main HTML help page now links to this CHANGES file.
	(Suggested by Henrik Bengtsson.) 

    o	strftime(format = "%z") now gives the timezone names used by
	the Olson database and not those used by Windows.

    o	iconv(to = "ASCII") no longer transliterates, but
	iconv(to = "ASCII//TRANSLIT") will.  This makes
	tools::showNonASCII() work the same way as on other platforms.
	

BUG FIXES

    o	Using ESC to interrupt a system() call could cause R to become
	unstable.




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.1 patched


BUG FIXES

    o	Some of the MDI toolbar buttons (e.g. "Open Script") did not
	return the focus to the console if the user cancelled the
	action.
	
    o	system() (and hence shell()) did not set the standard file
    	handles properly, so some programs would not run.

    o	setWinProgressBar() did not check the type of its 'title' and
	'label' arguments and might have crashed if they were
	mis-specified.  It now does, thanks to a report by Greg Snow.



		CHANGES IN R VERSION 2.10.1


BUG FIXES

    o	The installer did not properly record help type choices in
	R_HOME/etc/Rprofile.site.

    o	Rcmd INSTALL once again uses --no-restore, for consistency with
	the Unix version and R 2.9.2.
	
    o	The HTML package index was not constructed properly when the
	library path was specified with backslashes.  (Patch submitted
	by Gabor Grothendieck.)
	


    		CHANGES IN R VERSION 2.10.0


NEW FEATURES

    o	windows() now has a parameter fillOddEven (default TRUE),
	which controls the mode used for polygon fills of self-
	intersecting shapes.
	
    o 	The functions arrangeWindows() and getWindowsHandles() have
    	been added to give more programmatic control to the appearance
    	of windows in an R session.
    	
    o	A Windows menu has been added to the SDI version of the R GUI,