@@ -48,13 +48,10 @@ TCL_VERSION = 85
 BINPREF=
 
 # 32- or 64-bit Windows?  For MinGW-w64.
-WIN=32
-ifeq ($(strip $(WIN)),64)
-BINPREF = x86_64-w64-mingw32-
-# for sub-architecture
-R_ARCH = /x64
-DEFINES = -DR_ARCH='"x64"'
-endif
+WIN = 32
+
+# prefix for 64-bit compiler
+BINPREF64 = x86_64-w64-mingw32-
 
 # set to use ICU (experimental)
 # USE_ICU=YES
@@ -80,104 +77,3 @@ ISDIR=C:/packages/Inno
 WIXDIR=C:/packages/WiX
 
 ## =============== end of user-customizable parts  ===================
-
-## c99 would force __STRICT_ANSI__ disabling strdup etc, and also alloca
-C99FLAG=-std=gnu99
-## for mingw-runtime <= 3.11
-# C99FLAG=-std=gnu99 -fgnu89-inline
-
-ifeq ($(strip $(BUILD)),GCC4)
-F77=$(BINPREF)gfortran$(GCC4_SUFF)
-FLIBS=-lgfortran
-## earlier Rtools needs -sjlj; the alternative is -dw2, which fails building R.
-GCC4_SUFF=
-endif
-
-ifeq ($(strip $(BUILD)),F2C)
-F77=sh $(RHOME)/src/scripts/f77_f2c
-FLIBS=-lf2c
-endif
-
-## usually bin: other values are not yet completely accepted
-BINDIR=bin
-
-ifdef USE_IMPLIBS
-IMPDIR=lib
-else
-IMPDIR=$(BINDIR)
-endif
-
-## use in front-ends and internet module
-GRAPHAPP_LIB=-lRgraphapp
-## used in stats/src/Makevars.win
-BLAS_LIBS=-L$(RHOME)/$(IMPDIR) -lRblas
-## these were for packages
-# LAPACK_LIBS=-L$(RHOME)/$(IMPDIR) -lRlapack
-# ZLIB_LIBS=-lRzlib
-
-AR=$(BINPREF)ar
-AS=$(BINPREF)as
-# AWK=gawk
-CAT=cat
-CC=$(BINPREF)gcc$(GCC4_SUFF) $(C99FLAG)
-CP=cp
-# as set by make
-CPP=$(CC) -E
-DLL=$(CC)
-DLLTOOL=$(BINPREF)dlltool
-## some versions have trouble with paths, so we always need this
-## even for native builds
-DLLTOOLFLAGS=--as $(AS) -k
-ECHO=echo
-## FIND is only used in installer/Makefile
-FIND=find
-LINKER=$(MAIN_LD)
-MAIN_LD=$(CC)
-MKDIR=mkdir
-NM=$(BINPREF)nm
-PERL=perl
-RANLIB=$(BINPREF)ranlib
-RESCOMP=$(BINPREF)windres
-# as set by make
-RM=rm -f
-SED=sed
-SORT=sort
-
-## from etc/Renviron.site on Unix
-# EGREP=grep -e
-# LN_S=cp -p
-# TAR=tar
-
-.SUFFIXES:
-.SUFFIXES: .c .cc .cpp .C .f .o .a .def .exp .dll .exe .d .f90 .f95 .m .S
-
-.c.d:
-	@echo "making $@ from $<"
-	@$(CC) -MM $(CPPFLAGS) $($*-CPPFLAGS) $(DEFINES) $< -o $@
-
-.c.o:
-	$(CC) $(CPPFLAGS) $($*-CPPFLAGS) $(CFLAGS) $($*-CFLAGS) $(DEFINES) -c $< -o $@
-
-.f.o:
-	$(F77) $(FFLAGS) $($*-FFLAGS) -c $< -o $@
-
-%.exe:
-	$(LINKER) $(LINKFLAGS) $($*-LINKFLAGS) -o $@ $^ $($*-LIBS) $(LIBS)
-
-%.dll:
-	@$(ECHO) EXPORTS > $*.def
-	@$(NM) $^ | $(SED) -n 's/^.* [BCDRT] _/ /p' >> $*.def
-	$(DLL) -shared $(DLLFLAGS) $($*-DLLFLAGS) -o $@ $*.def $^ $($*-DLLLIBS) $(DLLLIBS)
-	@$(RM) $*.def
-
-lib%.dll.a: %.def
-	$(DLLTOOL) $(DLLTOOLFLAGS) $($*-DLLTOOLFLAGS) --dllname $*.dll --input-def $*.def --output-lib $@
-
-%.a:
-#	@$(ECHO) -------- Building $@ from $^ --------
-	@$(RM) $@
-	$(AR) crs $@ $^
-
-## MinGW-w64 at one time needed --use-temp-file
-%.o: %.rc
-	$(RESCOMP) $(RESFLAGS) $($*-RESFLAGS) -i $< -o $@
