@@ -44,7 +44,18 @@ NEW FEATURES
     o	iconv(to = "ASCII") no longer transliterates, but
 	iconv(to = "ASCII//TRANSLIT") will.  This makes
 	tools::showNonASCII() work the same way as on other platforms.
+
+
+INSTALLATION
+
+    o	When building R, the recommended way is now to supply a file
+	R_HOME/src/gnuwin32/MkRules.local instead of editing MkRules:
+	there is now no MkRules file in the distribution, but one is
+	generated during the build process.
 	
+	MkRules.local can be generated by copying and editing
+	MkRules.dist.
+
 
 BUG FIXES
 
